<resources>
    <string name="app_name">Lapoutta</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDjW7gI2pqfSoois-vrxDE821OUXlJkG3g</string>
    <string name="raja_ongkir_key">46b89c52c013a7d449e7d174dd096f72</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Name</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="cari_disini">Search this....</string>
    <string name="rekomendasi">Recommendation</string>
    <string name="kategori">Kategori</string>
    <string name="header">Header</string>
    <string name="rating">Rating</string>
    <string name="rp_10_000">Rp 10.000</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pertanyaan_terkait_produk_ini">Pertanyaan Terkait Produk Ini</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="lapoutta">Lapoutta</string>
    <string name="lokasi">Lokasi</string>
    <string name="kunjungi_toko">Kunjungi Toko</string>
    <string name="_100">100</string>
    <string name="product">Product</string>
    <string name="review">Review</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="tambah_kekeranjang">Tambah Kekeranjang</string>
    <string name="alamat">Alamat</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="periksa_ongkos_kirim">Periksa Ongkos Kirim</string>
    <string name="subtotal_untuk_produk">Subtotal untuk produk</string>
    <string name="subtotal_pengiriman">Subtotal Pengiriman</string>
    <string name="total_pembayaran_produk_ongkir">Total Pembayaran(Produk+ongkir)</string>
    <string name="buat_pesanan">Buat Pesanan</string>
    <string name="tanggal_pengambilan">Tanggal Pengambilan</string>
    <string name="pukul">Pukul</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="kirim_online">Kirim Online</string>
    <string name="mengirimkan_pesanan_anda_ketempat_yang_anda_inginkan">Mengirimkan pesanan anda ketempat yang anda inginkan.</string>
    <string name="anda_dapat_mengambil_pesanan_langsung_ke_lokasi_penjual">Anda dapat mengambil pesanan langsung ke lokasi penjual.</string>
    <string name="kirim_offline">Kirim Offline</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="lihat_stori">Lihat Stori</string>
    <string name="silahkan_lakukan_pembayaran_via_transfer_bank_ke_nomor_rekening_berikut">Silahkan Lakukan Pembayaran Via Transfer Bank Ke Nomor Rekening berikut.</string>
    <string name="nomor_pesanan">Nomor Pesanan</string>
    <string name="bank_bri">Bank BRI</string>
    <string name="bank_mandiri">Bank Mandiri</string>
    <string name="bank_bni">Bank BNI</string>
    <string name="upload_bukti_pembayaran">Upload Bukti Pembayaran</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="status">Status</string>
    <string name="pesananan_sudah_sampai">Pesananan Sudah Sampai</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="alamat_pembeli">Alamat Pembeli</string>
    <string name="status_pengiriman">Status Pengiriman</string>
    <string name="paket_telah_sampai">Paket Telah Sampai</string>
    <string name="informasi_pembayaran">Informasi Pembayaran</string>
    <string name="pengiriman_jne">Pengiriman JNE</string>
    <string name="hubungi_penjual">Hubungi Penjual</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="belanja_saya">Belanja Saya</string>
    <string name="belum_diverifikasi">Belum Diverifikasi</string>
    <string name="dikemas">Dikemas</string>
    <string name="dikirim">Dikirim</string>
    <string name="selesai">Selesai</string>
    <string name="batal">Batal</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="username">Username</string>
    <string name="telepon">Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="splash_store">Anda Mempunyai Usaha \n Buka Toko Anda \n Disini Sekarang</string>
    <string name="register_store">Daftar Toko</string>
    <string name="data_empty">Data Belum Ada</string>
    <string name="add_product">Tambah Product</string>
    <string name="rp_0_0">Rp 0.0</string>
    <string name="informasi">Informasi</string>
    <string name="lanjutan">Lanjutan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="store_address">Alamat Toko</string>
    <string name="next">Lanjut</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="send">Kirim</string>
    <string name="review_add_text">Tuliskan sesuatu tentang produk ini...</string>
    <string name="title_notif">Title Notifikasi</string>
    <string name="isi_notifikasi">Isi Notifikasi</string>
    <string name="storie">Stori</string>
    <string name="name_store">Nama Toko</string>
    <string name="npwp">NPWP</string>
    <string name="agree">Setuju</string>
    <string name="add">Tambah</string>
    <string name="add_storie">Tambah Stori</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_price">Harga Produk</string>
    <string name="product_stock">Stok Produk</string>
    <string name="change_store">Ubah Toko</string>
    <string name="change_product">Ubah Produk</string>
    <string name="send_with_angkot">Kirim dengan Angkot</string>
    <string name="pesanan_anda_akan_dikirim_menggunakan_angkot">Pesanan Anda Akan Dikirim Menggunakan Jasa Angkot</string>
    <string name="kirim_angkot">Kirim Angkot</string>
    <string name="logout">Logout</string>
    <string name="text_message">Text Message</string>
    <string name="button_action">Button Action</string>
    <string name="text_status">Text Status</string>
    <string name="no_order">Nomor Order</string>
    <string name="status_send">Status Pengiriman</string>
    <string name="status_transaction">Status Transaksi</string>
    <string name="view">Lihat</string>
    <string name="nomor_bank_tujuan">Nomor Bank Tujuan</string>
    <string name="nomor_bank_pengirim">Nomor Bank Pengirim</string>
    <string-array name="my_store">
        <item>Produk</item>
        <item>Transaksi</item>
    </string-array>
</resources>
