<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_name_store"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:text="@string/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_info"
        android:layout_below="@id/txt_name_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_product"
            android:src="@drawable/logo"
            android:layout_marginStart="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_name_product"
                android:text="@string/nama_produk"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_count"
                android:text="@string/todo"
                android:layout_marginStart="10dp"
                android:layout_below="@id/txt_name_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_toEndOf="@id/ll_info"
        android:layout_below="@id/txt_name_store"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="80dp" >

        <TextView
            android:id="@+id/txt_price_product"
            android:text="@string/rp_10_000"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_message"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/button_action"
                android:background="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_height="40dp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>