<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_toEndOf="@id/img_product"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/title_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_body"
        android:text="@string/isi_notifikasi"
        android:layout_below="@id/txt_title"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:layout_toEndOf="@id/img_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>