<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.store.ChangeProductActivity">

    <include
        layout="@layout/header_other"
        android:id="@+id/header_my_store"/>

    <ScrollView
        android:layout_below="@id/header_my_store"
        android:layout_above="@id/footer_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_add_story"
                android:text="@string/add_storie"
                android:background="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/img_product"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:layout_margin="5dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/btn_add_img"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/gambar_produk"
                android:background="@color/colorWhite"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/product_name"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/product_name"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/product_price"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/product_price"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/product_stock"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/product_stock"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_product_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/deskripsi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/deskripsi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_product_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_add_product"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/change_product"
                android:background="@color/colorWhite"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <include
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/footer_store"
        layout="@layout/footer_main"/>

</RelativeLayout>