<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_product"
        android:layout_margin="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        tools:src="@color/colorAccent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_name_product"
        android:text="@string/nama_produk"
        android:layout_margin="1dp"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_price_product"
        android:text="@string/rp_10_000"
        android:layout_margin="1dp"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />

</LinearLayout>