<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/image_logo"
        android:src="@drawable/logo3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_below="@id/image_logo"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:padding="10dp"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <EditText
        android:id="@+id/txt_password"
        android:layout_below="@id/txt_email"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@id/txt_password"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>