<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.store.ChangeStoreActivity">

    <include
        layout="@layout/header_other"
        android:id="@+id/header_my_store"/>

    <ScrollView
        android:layout_margin="10dp"
        android:layout_below="@id/header_my_store"
        android:layout_above="@id/footer_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/change_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/name_store"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/name_store"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_name_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/nomor_telepon"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/nomor_telepon"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_telp_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/nomor_ktp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/nomor_ktp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_nomor_ktp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/nomor_rekening"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/nomor_rekening"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_no_rek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lokasi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/lokasi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/provinsi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/provinsi"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/kota_kabupaten"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/kota_kabupaten"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/et_kabupatenKota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_update_store"
                android:layout_gravity="center"
                android:text="@string/simpan"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/footer_store"
        layout="@layout/footer_main"/>

</RelativeLayout>